--- a/Sis_18/WebContent/Alumno.html
+++ b/Sis_18/WebContent/Alumno.html
@@ -10,6 +10,14 @@
   <link href="estilo.css"
 
       rel="stylesheet" type="text/css">
+
+<script>
+function abrir() {
+open('Confirmacion.html','','top=300,left=300,width=300,height=300') ;
+}
+</script>
+
+
 </head>
 <body>
 
@@ -45,7 +53,43 @@
             </div>
 
             <br>
-            <input type="submit" onclick="location.href='seleccionarCartel.html'" value="Enviar" >
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Enviar Cartel
+</button>
+
+
+
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cartel Entregado</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="glyphicon glyphicon-ok"> <h4> Tu cartel ha sido entregado correctamente</h4></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <input type="submit" name="guardar"  class="btn btn-primary" value="Confirmar" onclick="location.href='seleccionarCartel.html'"></input>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
             <br>
             <br>
       </div>
