Directorio trabajo Ubide

--- a/Sis_18/WebContent/menuPrincipal.html
+++ b/Sis_18/WebContent/menuPrincipal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-es">
+<html lang="es">
 <head>
   <title>Menu_Principal</title>
   <meta charset="utf-8">
@@ -19,8 +19,8 @@
       <div class="col-xs-12 col-sm-12W col-md-12 col-lg-12" align="center">
          <div class="panel panel-danger">
            <br>
-           <button class= "btn btn-danger" onclick="location.href='login.html'">¡Inicia Sesión!</button>
-           <button class= "btn btn-danger" onclick="location.href='dardeAlta.html'">¡Regístrate!</button>
+           <button class= "btn btn-danger" onclick="location.href='login.jsp'">¡Inicia Sesión!</button>
+           <button class= "btn btn-danger" onclick="location.href='dardeAlta.jsp'">¡Regístrate!</button>
            <button class= "btn btn-danger" onclick="location.href='verCarteles.html'">¡Mira a nuestros antiguos ganadores!</button>
            <button class= "btn btn-danger" onclick="location.href='http://iqtma.cps.unizar.es'">¡Sobre ingeniería del medio ambiente!</button>
           <br><br>
