--- a/Sis_18/WebContent/menuPrincipal(Profesor).html
+++ b/Sis_18/WebContent/menuPrincipal(Profesor).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-es">
 <head>
-  <title>Menu_Principal</title>
+  <title>Menu_Principal (Profesor)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,6 +12,7 @@
 <div class="jumbotron text-center ">
     <h1>Reto ecológico</h1>
     <p>Atrévete a participar</p>
+    <button class= "btn btn-primary glyphicon glyphicon-arrow-left"  align="right" onclick="location.href='login.html'">Retroceder</button>
 </div>
 <br><br>
 <div class="container">
@@ -67,5 +68,3 @@
     </div>
   </div>
   </div>
-
-  
