--- a/Sis_18/WebContent/menuPrincipal(usuario).html
+++ b/Sis_18/WebContent/menuPrincipal(usuario).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-es">
 <head>
-  <title>Menu_Principal</title>
+  <title>Menu_Principal (Usuario)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,6 +12,8 @@
 <div class="jumbotron text-center ">
     <h1>Reto ecológico</h1>
     <p>Atrévete a participar</p>
+    <button class= "btn btn-primary glyphicon glyphicon-arrow-left"  align="right" onclick="location.href='login.html'">Retroceder</button>
+    <button class= "btn btn-primary glyphicon glyphicon-arrow-left"  align="right" onclick="location.href='dardebaja.html'">Dar de baja</button>
 </div>
 <br><br>
 <div class="container">
@@ -19,8 +21,7 @@
       <div class="col-xs-12 col-sm-12W col-md-12 col-lg-12" align="center">
          <div class="panel panel-danger">
            <br>
-           <button class= "btn btn-danger" onclick="location.href='login.html'">¡Inicia Sesión!</button>
-           <button class= "btn btn-danger" onclick="location.href='dardeAlta.html'">¡Regístrate!</button>
+           <button class= "btn btn-danger" onclick="location.href='perfilUsuario.html'">Tu cuenta</button>
            <button class= "btn btn-danger" onclick="location.href='verCarteles.html'">¡Mira a nuestros antiguos ganadores!</button>
            <button class= "btn btn-danger" onclick="location.href='http://iqtma.cps.unizar.es'">¡Sobre ingeniería del medio ambiente!</button>
           <br><br>
@@ -67,5 +68,3 @@
     </div>
   </div>
   </div>
-
-  
